# Issues-FS__Service

./: README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml
.issues/config/: link-types.json  node-types.json
issues_fs_service/: __init__.py  config.py
issues_fs_service/fast_api/: Issues_FS__Service__Fast_API.py  lambda_handler.py
issues_fs_service/fast_api/routes/: Routes__Comments.py  Routes__Links.py  Routes__Nodes.py  Routes__Server.py  Routes__Types.py
issues_fs_service/fast_api/routes/phase_1/: Routes__Issues.py  Routes__Roots.py
issues_fs_service/utils/: Version.py
issues_fs_service/utils/deploy/: Deploy__Service.py
tests/deploy_aws/: test_Deploy__Service__base.py
tests/unit/: Issues_FS__Service__Test_Objs.py
tests/unit/fast_api/: test_Issues_FS__Service__Fast_API__Phase_1.py
tests/unit/fast_api/routes/: test_Routes__Links.py  test_Routes__Nodes.py  test_Routes__Nodes__client.py  test_Routes__Server.py  test_Routes__Types.py
tests/unit/fast_api/routes/local_data/: test_Routes__Issues__local_data.py  test_Routes__Nodes__local_data.py  test_Routes__Roots__local_data.py
tests/unit/fast_api/routes/phase_1/: test_Routes__Issues.py  test_Routes__Issues__client.py  test_Routes__Roots.py  test_Routes__Roots__client.py
tests/unit/utils/: test_Version.py
